# django-rclone-storage

./: LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: django-rclone-storage.yml
rclonestorage/: rclone.py  rclone_remote.py
tests/: test_rclone.py
