[metadata]
name = django-rclone-storage
version = attr: rclonestorage.__version__
description = A simple wrapper for Rclone as a Django storage
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
author = ElnathMojo
author_email = ElnathMojo@gmail.com
url = https://github.com/ElnathMojo/django-rclone-storage
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe=False
python_requires = >=3.5
install_requires =
    Django >= 2.2
packages =
    rclonestorage

[flake8]
exclude =
    .tox
    .git,
    __pycache__,
    dist,
    venv,
    build,
    .idea,
    .pytest_cache
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = rclonestorage
line_length = 79
multi_line_output = 5